# agent-stage

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  tsconfig.json
.github/workflows/: ci.yml
docs/: agent_stage_director_configuration.md  agent_stage_harness_adapters.md  stage_manager.md
examples/stage-demo/: README.md  harness.py  run.py  server.py  stage_setup.py
frontend/src/: reference-renderer.ts  renderer-registry.ts  sanitize.ts  stage-demo-player.ts  stage-frame.ts  stage-manager.ts  video-renderer.ts
frontend/test/: redaction-parity.test.ts  reference-renderer.test.ts  renderer-registry.test.ts  stage-demo-player.test.ts  stage-frame.test.ts  stage-manager.test.ts  video-renderer.test.ts
frontend/test/fixtures/: placeholder-hevc-alpha.mov
src/agent_stage/: __init__.py  adapter.py  director.py  events.py  ndjson.py  sanitizer.py  stage_frame_v1.json  stage_signal.py  token_catalog.py  trace.py
tests/agent_stage/: test_adapter_contract.py  test_director_core.py  test_ndjson_ingestion.py  test_public_api.py  test_redaction_parity.py  test_stage_frame_schema.py  test_token_catalog.py  test_trace_contract.py
tests/examples/: test_stage_demo_smoke.py
tests/parity/: redaction_cases.json
tools/: generate_placeholder_hevc_alpha.swift
