[project]
name = "agent-stage"
version = "0.1.0"
description = "Harness-independent stage director contracts for public agent work streams."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Agent Stage contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "pyright>=1.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_stage*"]

[tool.setuptools.package-data]
agent_stage = ["stage_frame_v1.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
